--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="content">
     </div>
     <footer class="footer">
-        <h1>Hi! I'm Marta and I make magic happen &#128302;</h1>
-        <div class="welcome-text">My potions of choice are Python and NLP
+        <h1>Hi!<br>I'm Marta and I make magic happen &#128302;</h1>
+        <div class="welcome-text">My potions of choice are:
         </div>
       </footer>
 </body>
