changed font size for h1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="content">
     </div>
     <footer class="footer">
-        <h1>Hi!<br>I'm Marta and I make magic happen &#128302;</h1>
+        <h1>Hi! I'm Marta and I make magic happen &#128302;</h1>
         <div class="welcome-text">My potions of choice are:
         </div>
       </footer>
