added menu and changed underline

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 </head>
 
 <body>
-    <h1></h1>
+
     <div class="content">
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
     </div>
     <footer class="footer">
         <h1>Hi! I'm Marta and I make magic happen &#128302;</h1>
-        <div class="welcome-text">My potions of choice are:
+        <div class="welcome-text">My potions of choice are: <u>Machine Learning</u> in <u>Python</u> with focus on <u>NLP</u>.
         </div>
       </footer>
 </body>
