--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Lato:wght@100|Open+Sans:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Syne:wght@800&|Open+Sans:300,700" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marta Osińska - Junior Machine Learning Engineer</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
+    <!-- The video -->
+<video autoplay muted loop id="myVideo">
+    <source src="video.mp4" type="video/mp4">
+  </video>
 
     <div class="content">
         <ul>
@@ -20,11 +25,11 @@
             <li><a href="#">Contact</a></li>
           </ul>
     </div>
-    <footer class="footer">
-        <h1>Hi! I'm Marta and I make magic happen &#128302;</h1>
-        <div class="welcome-text">My potions of choice are: <u>Machine Learning</u> in <u>Python</u> with focus on <u>NLP</u>.
-        </div>
-      </footer>
+
+    <div class="contents">
+        <h1>Hi, I'm Marta. I make magic happen.</h1>
+        <div class="welcome-text">My potions of choice are: <u>Machine Learning</u> in <u>Python</u> with focus on <u>NLP</u> &#128302;
+        </div></div>
 </body>
 
 </html>
