--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- The video -->
-<video autoplay muted loop id="myVideo">
+<video autoplay muted loop playsinline id="myVideo">
     <source src="video.mp4" type="video/mp4">
   </video>
 
